add arg to script call

--- a/build_envgene/ansible/roles/build_env/tasks/02_prepare_vars.yaml
+++ b/build_envgene/ansible/roles/build_env/tasks/02_prepare_vars.yaml
@@ -25,7 +25,7 @@
   register: custom_logic_script
 
 - name: Include custom logic
-  script: "{{ prepare_vars_extension_path }}"
+  script: "{{ prepare_vars_extension_path }} {{ env_definition_path }}"
   when: custom_logic_script.stat.exists
 
 - name: include old logic
