--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -165,7 +165,6 @@
         loop_var: paramset_file
       when: paramset_templates.files | length > 0
 
-    # ------------------------------------
     # Step 1: Check if any AppDef or RegDef templates exist
     - name: Check if any AppDef or RegDef templates exist
       ansible.builtin.find:
@@ -180,20 +179,17 @@
       register: appregdef_templates_found
       ignore_errors: true
 
-    # Debugging Step (optional but recommended)
+    # Step 2: Debug
     - name: Debug - Found AppDef/RegDef templates
       ansible.builtin.debug:
-        msg: "Total AppDef/RegDef templates found: {{ appregdef_templates_found.files | length }}"
-      when: appregdef_templates_found is defined
+        msg: "Total AppDef/RegDef templates found: {{ appregdef_templates_found.files | default([]) | length }}"
 
-    # ------------------------------------
-    # Step 2: Render AppDef/RegDef Templates if any found
+    # Step 3: Render AppDefs and RegDefs if any
     - name: Render AppDef/RegDef templates
       ansible.builtin.include_role:
         name: generate_appregdefs
       vars:
         cluster_name: "{{ cluster_name }}"
       when:
-        - appregdef_templates_found is defined
-        - appregdef_templates_found.files | length > 0
-
+        - appregdef_templates_found.files is defined
+        - (appregdef_templates_found.files | default([]) | length) > 0
