--- a/env-builder/roles/generate_appregdefs/tasks/main.yaml
+++ b/env-builder/roles/generate_appregdefs/tasks/main.yaml
@@ -1,5 +1,8 @@
 ---
+###############################################################################
 # --- Ensure AppDefs and RegDefs folders exist
+###############################################################################
+
 - name: Ensure AppDefs and RegDefs folders exist
   ansible.builtin.file:
     path: "{{ current_env_dir }}/{{ item }}"
@@ -8,7 +11,10 @@
     - AppDefs
     - RegDefs
 
+###############################################################################
 # --- Load appregdef config if exists
+###############################################################################
+
 - name: Determine appregdef config path
   ansible.builtin.set_fact:
     appregdef_config_path: >-
@@ -26,10 +32,9 @@
         )
       }}
 
-- name: Load appregdef config if it exists
+- name: Load appregdef config (safe fallback to empty)
   ansible.builtin.set_fact:
-    appregdef_config: "{{ lookup('file', appregdef_config_path) | from_yaml }}"
-  ignore_errors: true
+    appregdef_config: "{{ lookup('file', appregdef_config_path, errors='ignore') | default('{}', True) | from_yaml }}"
 
 - name: Set default overrides
   ansible.builtin.set_fact:
@@ -42,16 +47,21 @@
       - "AppDefs Overrides: {{ appdefs_overrides }}"
       - "RegDefs Overrides: {{ regdefs_overrides }}"
 
+###############################################################################
 # --- Render and Save AppDefs
+###############################################################################
+
 - name: Render and save AppDefs
   when: appdef_templates_files | length > 0
   block:
+
     - name: Debug - Found AppDef templates
       ansible.builtin.debug:
         msg: "Total AppDef templates found: {{ appdef_templates_files | length }}"
 
-    - name: Render and Save AppDefs
+    - name: Render and save AppDefs
       block:
+
         - name: Render AppDef to temp file
           ansible.builtin.template:
             src: "{{ item.path }}"
@@ -59,31 +69,40 @@
           vars:
             appdefs:
               overrides: "{{ appdefs_overrides }}"
+          failed_when: false
 
-        - name: Read AppDef name
+        - name: Read AppDef name from rendered file
           ansible.builtin.set_fact:
             appdef_rendered_path: "/tmp/{{ item.path | basename | regex_replace('\\.j2$', '') }}.rendered.appdef.yml"
-            appdef_name: "{{ lookup('file', appdef_rendered_path) | from_yaml | json_query('name') }}"
+            appdef_name: "{{ lookup('file', appdef_rendered_path, errors='ignore') | default('{}', True) | from_yaml | json_query('name') }}"
+          failed_when: false
 
         - name: Save rendered AppDef
           ansible.builtin.copy:
             src: "{{ appdef_rendered_path }}"
             dest: "{{ current_env_dir }}/AppDefs/{{ appdef_name }}.yml"
             remote_src: true
+          failed_when: false
+
       loop: "{{ appdef_templates_files }}"
       loop_control:
         label: "{{ item.path | basename }}"
 
+###############################################################################
 # --- Render and Save RegDefs
+###############################################################################
+
 - name: Render and save RegDefs
   when: regdef_templates_files | length > 0
   block:
+
     - name: Debug - Found RegDef templates
       ansible.builtin.debug:
         msg: "Total RegDef templates found: {{ regdef_templates_files | length }}"
 
-    - name: Render and Save RegDefs
+    - name: Render and save RegDefs
       block:
+
         - name: Render RegDef to temp file
           ansible.builtin.template:
             src: "{{ item.path }}"
@@ -91,17 +110,21 @@
           vars:
             regdefs:
               overrides: "{{ regdefs_overrides }}"
+          failed_when: false
 
-        - name: Read RegDef name
+        - name: Read RegDef name from rendered file
           ansible.builtin.set_fact:
             regdef_rendered_path: "/tmp/{{ item.path | basename | regex_replace('\\.j2$', '') }}.rendered.regdef.yml"
-            regdef_name: "{{ lookup('file', regdef_rendered_path) | from_yaml | json_query('name') }}"
+            regdef_name: "{{ lookup('file', regdef_rendered_path, errors='ignore') | default('{}', True) | from_yaml | json_query('name') }}"
+          failed_when: false
 
         - name: Save rendered RegDef
           ansible.builtin.copy:
             src: "{{ regdef_rendered_path }}"
             dest: "{{ current_env_dir }}/RegDefs/{{ regdef_name }}.yml"
             remote_src: true
+          failed_when: false
+
       loop: "{{ regdef_templates_files }}"
       loop_control:
         label: "{{ item.path | basename }}"
