--- a/env-builder/roles/generate_cloud/tasks/main.yaml
+++ b/env-builder/roles/generate_cloud/tasks/main.yaml
@@ -1,6 +1,33 @@
 ---
+- name: Tell the cloud attribute format
+  set_fact:
+    is_old_format: "{{ _cloud | type_debug == 'dict' }}"
+
 - name: Generate Cloud yaml for cloud {{ _cloud }}
   ansible.builtin.blockinfile:
     path: "{{ current_env_dir }}/cloud.yml"
     block: "{{ lookup('template', _template) }}"
     create: yes
+  when: is_old_format
+
+- name: Generate Cloud yaml for cloud {{ _cloud }} using cloud.template_path value
+  ansible.builtin.blockinfile:
+    path: "{{ current_env_dir }}/cloud.yml"
+    block: "{{ lookup('template', _cloud.template_path) }}"
+    create: yes
+  when: not is_old_format
+
+- name: Set template_override
+  set_fact:
+    template_override: "{{ _cloud.template_override | default('') }}"
+  when: not is_old_format
+
+- name: Generate override Cloud yaml for {{ _cloud }}
+  ansible.builtin.blockinfile:
+    path: "{{ _current_env_dir }}/cloud.yml_override"
+    block: "{{ template_override }}"
+    create: yes
+  when: 
+    - template_override != ''
+    - not is_old_format
+
